--- a/styles.css
+++ b/styles.css
@@ -1,73 +1,116 @@
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
 }
 
-section{
-    width: 100%;
-    height: 100vh;
-    border:solid;
-    display: flex;
-    background-color: #0C0B0B;
-    justify-content: center;
-    align-items: center;   
+.container{
+  width:100%;
+  height: 1080px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
 }
 
-.container_box--profile{
-    display: flex;
-    background-color: #0F0E0E;
-    justify-content: space-evenly;
-    align-items: center;
-    border:solid;
-    color:#B7B7B7;
-    width: 70%;
-    height: 80vh;
+.container_box{
+  width:50%;
+  height: 60%;
+  background-color: #303030;
+  border-radius: 15px;;
+  display: flex;
+  flex-direction:column;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
-.container_box--profile .profile{
-    width:5vw;
-    height: 10vh;
-    border:solid;
-    border-radius:50%;
+.caixa-logo{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
-.box{
-    width: 100%;
-    height: 20vh;
-    display: flex;
-    justify-content: space-evenly;
+.caixa-editar{
+  border: solid black;
+  height: 10vh;
+  width: 20%;
+  color:white;
+  display: flex;
+  align-items: center;
+  font-size:20px;
 }
 
-.verde{
-    justify-content: center;
-    align-items: center; 
-    flex-direction: column;
-    display: flex;
-    border:solid;
-    width: 13vw;
-    background-color: #046313;
-    border-radius: 10px;
+.caixa-editar img{
+  width: 3vw;
 }
 
-.azul{
-    justify-content: center;
-    align-items: center; 
-    flex-direction: column;
-    display: flex;
-    background-color:  #044A7D;
-    border:solid;
-    width: 13vw;
-    border-radius: 10px;
+.container_box_logo{
+  border:solid;
+  width: 40%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  
 }
 
-.amarelo{
-    justify-content: center;
-    flex-direction: column;
-    align-items: center; 
-    display: flex;
-    background-color:  #725200;
-    border:solid;
-    width: 13vw;
-    border-radius: 10px;
+.container_box_logo--photo{
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+}
+
+.container_box--division{
+  display: flex;
+  justify-content: space-evenly; 
+  align-items: center;
+  flex-wrap: wrap;
+  height: 40%;
+  width: 100%;
+}
+
+.container_box--caixa1{
+  border:solid;
+  width:15vw;
+  height: 20vh;
+  border-radius: 15px;
+  background-color: green;
+  color:white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  font-weight: 600;
+}
+
+.container_box--caixa2{
+  border:solid;
+  border:solid;
+  width:15vw;
+  height: 20vh;
+  border-radius: 15px;
+  background-color: blue;
+  color:white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  font-weight: 600;
+}
+
+.container_box--caixa3{
+  border:solid;
+  border:solid;
+  width:15vw;
+  height: 20vh;
+  border-radius: 15px;
+  background-color: goldenrod;
+  color:white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  font-weight: 600;
 }
